tests/ui/rustdoc/deny-invalid-doc-attrs.stderr
error: unknown `doc` attribute `x`
  --> $DIR/deny-invalid-doc-attrs.rs:3:8
   |
LL | #![doc(x)]
   |        ^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>
note: the lint level is defined here
  --> $DIR/deny-invalid-doc-attrs.rs:1:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

